# Algos

./: .ycm_extra_conf.py  CMakeLists.txt
src/: Tri.cpp  Tri.hpp  main.cpp
